move logo to the left, fix small layout issue

--- a/tt-rss.css
+++ b/tt-rss.css
@@ -8,14 +8,17 @@ body {
 
 /* common styles */
 
-table.main td.header {
-	padding : 10px 10px 10px 50px;
-	height : 70px;
-	font-size : 24pt;
-	font-weight : bold;	
+table.main td.headerBox {
 	background-image : url("images/vgrad_light_rev2.png");
 	background-position : top left;
 	background-repeat : repeat-x;
+}
+
+table.main td.header {
+	padding : 10px 10px 10px 30px;
+	height : 80px;
+	font-size : 24pt;
+	font-weight : bold;	
 }
 
 table.main td.mainToolbar {
